RESOLVED FIXED286163
[WebDriver][BiDi] Fix error response id, type, and error name fields
https://bugs.webkit.org/show_bug.cgi?id=286163
Summary [WebDriver][BiDi] Fix error response id, type, and error name fields
Lauro Moura
Reported 2025-01-17 12:11:56 PST
The error response is missing a few bits: - Attaching the command's "id" field in some `Message::fail` calls, so the client know what command caused the error response - The "type" field, with value "error", mirroring the other types ("event", and "response") - The "error" field is the JSON error name string, per https://w3c.github.io/webdriver/#dfn-error-code. Currently, we're sending the corresponding HTTP status code. These are causing the `webdriver` WPT library to hang if the browser replies with an error. Patch incoming.
Attachments
Lauro Moura
Comment 1 2025-01-17 12:32:56 PST
Radar WebKit Bug Importer
Comment 2 2025-01-24 12:12:14 PST
EWS
Comment 3 2025-02-03 04:23:56 PST
Committed 289728@main (faec608ad6c7): <https://commits.webkit.org/289728@main> Reviewed commits have been landed. Closing PR #39207 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.