[WebDriver][BiDi] Fix error response id, type, and error name fields https://bugs.webkit.org/show_bug.cgi?id=286163

Reviewed by NOBODY (OOPS!).

- Attach the command's "id" field in some `Message::fail` calls,
so the client know what command caused the error response
- Add the "type" field, with value "error", mirroring the other
types ("event", and "response")
- The "error" field should be the JSON error name string, per
https://w3c.github.io/webdriver/#dfn-error-code. Currently,
we were sending the corresponding HTTP status code.

* Source/WebDriver/CommandResult.cpp:
(WebDriver::CommandResult::errorString const):
(WebDriver::CommandResult::errorCodeToErrorString):
* Source/WebDriver/CommandResult.h:
* Source/WebDriver/WebDriverService.cpp:
(WebDriver::WebDriverService::bidiSessionSubscribe):
(WebDriver::WebDriverService::bidiSessionUnsubscribe):
* Source/WebDriver/WebSocketServer.cpp:
(WebDriver::WebSocketMessageHandler::Message::fail):